tried to make 'take quiz' work

--- a/css/main.css
+++ b/css/main.css
@@ -4,6 +4,11 @@
     right: 0;
     bottom: 0;
     left: 0;
-    background-color: #efefef;
+    background-color: #a8a8a8;
     text-align: center;
+    margin-bottom: -1%;
 }
+
+
+
+
